<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tecsup.c15.c4.ichiro.honda.com.myapplicationpizza.Main2Activity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">


 <Spinner
     android:layout_width="350dp"
     android:layout_height="60dp"
     android:layout_gravity="center"
     android:layout_marginTop="10dp"
     android:id="@+id/sp01">
 </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/tipoM"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/gruop"
        >

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mg"
        android:textSize="18dp"
        android:id="@+id/mgruesa"
        android:paddingLeft="20dp"
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/md"
            android:id="@+id/mdelgada"
            android:textSize="18dp"
            android:paddingLeft="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms"
            android:id="@+id/martesanal"
            android:textSize="18dp"
            android:paddingLeft="20dp"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/compl"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="complementos"
        android:text="@string/ex"
        />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="complementos"
        android:text="@string/ex2"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/d"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>
    
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:id="@+id/resultado"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/dv"
        android:onClick="showDialog"
        android:id="@+id/confirmar"

        />

</LinearLayout>
</RelativeLayout>
